objects/Training_Plan__c.object
<CustomObject>
    <description>Track # of completed courses for a user</description>
    <fields>
        <fullName>Completion_Ratio__c</fullName>
        <formula>Text(Courses_Completed__c ) &amp; &quot;/&quot; &amp;  Text(Total_Courses__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completion Ratio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courses_Completed__c</fullName>
        <description>Courses Completed</description>
        <label>Courses Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Courses__c</fullName>
        <label>Total Courses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Training Plan</label>
    <nameField>
        <label>Training Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>